<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.apache</groupId>
    <artifactId>apache</artifactId>
    <version>23</version>
    <relativePath />
  </parent>

  <groupId>org.example</groupId>
  <artifactId>spark-causalml-parent</artifactId>
  <version>0.0.1</version>
  <packaging>pom</packaging>
  <name>spark-causalml-parent</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
    <spark.version>3.5.0</spark.version>
    <spark.compat.version>3.5.0</spark.compat.version>
    <scala.compat.version>2.12</scala.compat.version>
    <scala.binary.version>2.12</scala.binary.version>
    <scala.version>2.12.18</scala.version>
    <scalatest.version>3.1.1</scalatest.version>
    <hadoop.version>3.3.2</hadoop.version>
    <hive.version>1.2.1</hive.version>

    <!-- For JDK-17 test -->
    <extraJavaTestArgs>
      -XX:+IgnoreUnrecognizedVMOptions
      --add-opens=java.base/java.lang=ALL-UNNAMED
      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
      --add-opens=java.base/java.io=ALL-UNNAMED
      --add-opens=java.base/java.net=ALL-UNNAMED
      --add-opens=java.base/java.nio=ALL-UNNAMED
      --add-opens=java.base/java.util=ALL-UNNAMED
      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
      --add-opens=java.base/sun.security.action=ALL-UNNAMED
      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
      -Djdk.reflect.useDirectMethodHandle=false
    </extraJavaTestArgs>
  </properties>

  <dependencies>
    <!-- Include junit automatically, projects must include scalatest themselves since not all use -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>
<!--     Include log4j deps for tests for consistent logging across modules-->
<!--    <dependency>-->
<!--      <groupId>org.apache.logging.log4j</groupId>-->
<!--      <artifactId>log4j-core</artifactId>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.apache.logging.log4j</groupId>-->
<!--      <artifactId>log4j-slf4j-impl</artifactId>-->
<!--    </dependency>-->
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <!-- Set version to 3.0.0 to get rid of the deploying artifacts twice problem in older versions -->
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0</version>
          <executions>
            <execution>
              <id>default-deploy</id>
              <phase>deploy</phase>
              <goals>
                <goal>deploy</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
            <autoResolveSnapshots>all</autoResolveSnapshots>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <!-- Don't enable all submodules when running the
                 actual build using modified POMs -->
            <preparationProfiles>!enable-all-submodules</preparationProfiles>
          </configuration>
        </plugin>
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>4.7.1</version>
          <executions>
            <execution>
              <id>scala-compile-first</id>
              <phase>process-resources</phase>
              <goals>
                <goal>add-source</goal>
                <goal>compile</goal>
              </goals>
              <configuration>
                <args>
                  <arg>-dependencyfile</arg>
                  <arg>${project.build.directory}/.scala_dependencies</arg>
                </args>
              </configuration>
            </execution>
            <execution>
              <id>scala-test-compile</id>
              <phase>process-test-resources</phase>
              <goals>
                <goal>testCompile</goal>
              </goals>
              <configuration>
                <args>
                  <arg>-dependencyfile</arg>
                  <arg>${project.build.directory}/.scala_dependencies</arg>
                </args>
              </configuration>
            </execution>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>doc-jar</goal>
              </goals>
              <configuration>
                <args>
                  <arg>${scaladoc.arg}</arg>
                </args>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
              <source>${maven.compiler.source}</source>
              <target>${maven.compiler.target}</target>
          </configuration>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.scalatest</groupId>
          <artifactId>scalatest-maven-plugin</artifactId>
          <version>2.2.0</version>
          <configuration>
            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
            <junitxml>.</junitxml>
            <filereports>TestSuiteReport.txt</filereports>
            <argLine>${extraJavaTestArgs}</argLine>
          </configuration>
          <executions>
            <execution>
              <id>test</id>
              <goals>
                <goal>test</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
<!--        <plugin>-->
<!--          <groupId>org.scalastyle</groupId>-->
<!--          <artifactId>scalastyle-maven-plugin</artifactId>-->
<!--          <version>1.0.0</version>-->
<!--          <configuration>-->
<!--            <verbose>false</verbose>-->
<!--            <failOnViolation>true</failOnViolation>-->
<!--            <includeTestSourceDirectory>true</includeTestSourceDirectory>-->
<!--            <failOnWarning>false</failOnWarning>-->
<!--            <sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>-->
<!--            <testSourceDirectory>${project.basedir}/src/test/scala</testSourceDirectory>-->
<!--            <configLocation>${project.basedir}/../scalastyle_config.xml</configLocation>-->
<!--            <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile>-->
<!--            <outputEncoding>UTF-8</outputEncoding>-->
<!--          </configuration>-->
<!--          <executions>-->
<!--            <execution>-->
<!--              <goals>-->
<!--                <goal>check</goal>-->
<!--              </goals>-->
<!--            </execution>-->
<!--          </executions>-->
<!--        </plugin>-->
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>net.nicoulaj.maven.plugins</groupId>
        <artifactId>checksum-maven-plugin</artifactId>
        <version>1.9</version>
        <executions>
          <execution>
            <goals>
              <goal>artifacts</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <algorithms>
            <algorithm>SHA-512</algorithm>
          </algorithms>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <!-- This plugin is to replace property values in artifact names when publish -->
      <plugin>
        <groupId>io.paradoxical</groupId>
        <artifactId>resolved-pom-maven-plugin</artifactId>
        <version>1.0</version>
        <configuration>
          <properties>
            <spark.compat.version>${spark.compat.version}</spark.compat.version>
            <scala.compat.version>${scala.compat.version}</scala.compat.version>
            <spark.version>${spark.version}</spark.version>
            <scala.version>${scala.version}</scala.version>
          </properties>
        </configuration>
        <executions>
          <execution>
            <id>resolve-my-pom</id>
            <phase>package</phase>
            <goals>
              <goal>resolve-pom</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.21.0</version>
        <configuration>
          <argLine>${extraJavaTestArgs}</argLine>
        </configuration>
      </plugin>
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-javadoc-plugin</artifactId>-->
<!--        <version>2.10.4</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <id>attach-javadocs</id>-->
<!--            <goals>-->
<!--              <goal>jar</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--        <configuration>-->
<!--          <failOnError>false</failOnError>-->
<!--          <additionalparam>-Xdoclint:none</additionalparam>-->
<!--        </configuration>-->
<!--      </plugin>-->
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>allow-snapshots</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <repositories>
        <repository>
          <id>snapshots-repo</id>
          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
          <releases>
            <enabled>false</enabled>
          </releases>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
        </repository>
      </repositories>
    </profile>
    <profile>
      <!-- This profile works for Spark 3.0, 3.1, 3.2 and 3.3 -->
      <id>spark-3.0</id>
      <activation>
        <property>
          <name>spark</name>
          <value>3.0</value>
        </property>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <spark.version>3.3.0</spark.version>
        <spark.compat.version>3.0</spark.compat.version>
        <log4j.version>2.17.2</log4j.version>
        <scaladoc.arg>-no-java-comments</scaladoc.arg>
      </properties>
    </profile>
    <profile>
      <id>spark-3.5</id>
      <activation>
        <property>
          <name>spark</name>
          <value>3.5</value>
        </property>
      </activation>
      <properties>
        <spark.version>3.5.0</spark.version>
        <spark.compat.version>3.5</spark.compat.version>
        <log4j.version>2.19.0</log4j.version>
        <scaladoc.arg>-no-java-comments</scaladoc.arg>
      </properties>
    </profile>
    <profile>
      <id>scala2.13</id>
      <activation>
        <property>
          <name>scala</name>
          <value>2.13</value>
        </property>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <scala.version>2.13.8</scala.version>
        <scala.compat.version>2.13</scala.compat.version>
        <scaladoc.arg>-no-java-comments</scaladoc.arg>
        <!-- Skip deploying parent module for Scala 2.13 profile, it will be deployed with 2.12 -->
        <skip.deploy.common.modules>true</skip.deploy.common.modules>
      </properties>
      <modules>
        <module>spark</module>
      </modules>
    </profile>
    <profile>
      <id>scala2.12</id>
      <activation>
        <property>
          <name>scala</name>
          <value>2.12</value>
        </property>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <scala.version>2.12.15</scala.version>
        <scala.compat.version>2.12</scala.compat.version>
        <scaladoc.arg>-no-java-comments</scaladoc.arg>
      </properties>
      <modules>
        <module>spark</module>
      </modules>
    </profile>
  </profiles>
</project>